fix bookmark checkbox alignment on search results page

--- a/app/assets/stylesheets/blacklight/_catalog.css.scss
+++ b/app/assets/stylesheets/blacklight/_catalog.css.scss
@@ -117,8 +117,7 @@ span.constraints-label {
 
 #documents .documentFunctions
 {
-	float:right;
-  margin: 10px 0;
+  @extend .pull-right;
 
   .bookmark_toggle
   {
